# pkg/corerp/api/v20231001preview/zz_generated_models.go
@@ -1415,6 +1415,18 @@ type RecipePropertiesUpdate struct {
 // GetRecipePropertiesUpdate implements the RecipePropertiesUpdateClassification interface for type RecipePropertiesUpdate.
 func (r *RecipePropertiesUpdate) GetRecipePropertiesUpdate() *RecipePropertiesUpdate { return r }
 
+// RecipeStatus - Recipe status at deployment time for a resource.
+type RecipeStatus struct {
+	// REQUIRED; Template kind is the kind of template.
+	TemplateKind *string
+
+	// REQUIRED; TemplatePath is the path specified in the recipe.
+	TemplatePath *string
+
+	// TemplateVersion is the version number of the template.
+	TemplateVersion *string
+}
+
 // RecipeUpdate - The recipe used to automatically deploy underlying infrastructure for a portable resource
 type RecipeUpdate struct {
 	// The name of the recipe within the environment to use
@@ -1452,6 +1464,9 @@ type ResourceStatus struct {
 
 	// Properties of an output resource
 	OutputResources []*OutputResource
+
+	// READ-ONLY; The recipe data at the time of deployment
+	Recipe *RecipeStatus
 }
 
 // RuntimesProperties - The properties for runtime configuration
