# pkg/recipes/types.go
@@ -21,6 +21,7 @@ import (
 	"encoding/json"
 
 	"github.com/radius-project/radius/pkg/corerp/datamodel"
+	rpv1 "github.com/radius-project/radius/pkg/rp/v1"
 )
 
 // Configuration represents kubernetes runtime and cloud provider configuration, which is used by the driver while deploying recipes.
@@ -98,11 +99,14 @@ type RecipeOutput struct {
 
 	// Values represents the key/value pairs of properties of the deployed resource.
 	Values map[string]any
+
+	// Status represents the recipe status at deployment time of resource.
+	Status *rpv1.RecipeStatus
 }
 
 // PrepareRecipeOutput populates the recipe output from the recipe deployment output stored in the "result" object.
 // outputs map is the value of "result" output from the recipe deployment response.
-func (ro *RecipeOutput) PrepareRecipeResponse(resultValue map[string]any) error {
+func (ro *RecipeOutput) PrepareRecipeResponse(status *rpv1.RecipeStatus, resultValue map[string]any) error {
 	b, err := json.Marshal(&resultValue)
 	if err != nil {
 		return err
@@ -125,6 +129,11 @@ func (ro *RecipeOutput) PrepareRecipeResponse(resultValue map[string]any) error 
 	}
 	if ro.Resources == nil {
 		ro.Resources = []string{}
+	}
+
+	// Set the recipe status only at deployment time.
+	if ro.Status == nil {
+		ro.Status = status
 	}
 
 	return nil
