# pkg/rp/v1/types.go
@@ -62,12 +62,17 @@ type ResourceStatus struct {
 
 	// OutputResources represents the output resources associated with the radius resource.
 	OutputResources []OutputResource `json:"outputResources,omitempty"`
+	Recipe          *RecipeStatus    `json:"recipe,omitempty"`
 }
 
 // DeepCopy copies the contents of the ResourceStatus struct from in to out.
 func (in *ResourceStatus) DeepCopy(out *ResourceStatus) {
 	in.Compute = out.Compute
 	in.OutputResources = out.OutputResources
+	in.Recipe = &RecipeStatus{
+		TemplateKind: out.Recipe.TemplateKind,
+		TemplatePath: out.Recipe.TemplatePath,
+	}
 }
 
 // EnvironmentCompute represents the compute resource of Environment.
