# swagger/specification/applications/resource-manager/Applications.Core/preview/2023-10-01-preview/openapi.json
@@ -4784,6 +4784,28 @@
         "templateKind"
       ]
     },
+    "RecipeStatus": {
+      "type": "object",
+      "description": "Recipe status at deployment time for a resource.",
+      "properties": {
+        "templateKind": {
+          "type": "string",
+          "description": "Template kind is the kind of template."
+        },
+        "templatePath": {
+          "type": "string",
+          "description": "TemplatePath is the path specified in the recipe."
+        },
+        "templateVersion": {
+          "type": "string",
+          "description": "TemplateVersion is the version number of the template."
+        }
+      },
+      "required": [
+        "templateKind",
+        "templatePath"
+      ]
+    },
     "RecipeUpdate": {
       "type": "object",
       "description": "The recipe used to automatically deploy underlying infrastructure for a portable resource",
@@ -4843,6 +4865,11 @@
         "compute": {
           "$ref": "#/definitions/EnvironmentCompute",
           "description": "The compute resource associated with the resource."
+        },
+        "recipe": {
+          "$ref": "#/definitions/RecipeStatus",
+          "description": "The recipe data at the time of deployment",
+          "readOnly": true
         },
         "outputResources": {
           "type": "array",
